src/test/resources/tokens/invalid/integer_out_of_bounds_positive_octal.unpick
unpick v3
group int
    040000000000